--- a/src/components/BookDirectory.module.scss
+++ b/src/components/BookDirectory.module.scss
@@ -1,13 +1,16 @@
 .container {
-  max-width: 800px;
-  margin: 20px auto;
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
   padding: 20px;
-  background: gray;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  text-align: center;
+}
+
+.leftSide,
+.rightSide {
+  width: 48%;
 }
 
 .title {
   font-size: 2rem;
+  margin-bottom: 20px;
 }
