--- a/src/components/BookDirectory.module.scss
+++ b/src/components/BookDirectory.module.scss
@@ -14,3 +14,85 @@
   font-size: 2rem;
   margin-bottom: 20px;
 }
+
+.bookList {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.bookCard {
+  background: #fafafa;
+  padding: 15px;
+  border: 1px solid #ddd;
+  border-radius: 6px;
+  display: flex;
+  gap: 15px;
+  text-align: left;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.thumbnail {
+  max-width: 50px;
+  height: auto;
+}
+
+.bookInfo {
+  display: flex;
+  gap: 15px;
+}
+
+.bookDetails {
+  color: black;
+  font-size: 14px;
+}
+
+.bookTitle {
+  font-size: 18px;
+  margin-bottom: 10px;
+}
+
+.authors {
+  font-size: 14px;
+  color: #555;
+}
+
+.description {
+  font-size: 14px;
+  color: #666;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.input {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+
+.button {
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
+
+.error {
+  color: red;
+  margin-bottom: 10px;
+}
